package gameLaby.laby;

import java.io.BufferedReader;
import java.io.FileReader;
import java.io.IOException;
import java.util.ArrayList;

import static JeuSimple.LabyDessin.TAILLE;

/**
 * classe labyrinthe. represente un labyrinthe avec
 * <ul> des murs </ul>
 * <ul> un personnage (x,y) </ul>
 */
public class Labyrinthe {

    /**
     * Constantes char
     */
    public static final char MUR = 'X';
    public static final char PJ = 'P';
    public static final char VIDE = '.';
    public static final char MONSTRE = 'M';
    public static final char PASSAGE = '#';
    public static final char BOUTON = '*';

    /**
     * constantes actions possibles
     */
    public static final String HAUT = "Haut";
    public static final String BAS = "Bas";
    public static final String GAUCHE = "Gauche";
    public static final String DROITE = "Droite";

    /**
     * attribut du personnage
     */
    public Perso pj;
    /**
     * attribut du monstre
     */
    public ArrayList<Monstre> monstre;

    /**
     * attribut du passage secret
     */
    public PassageSecret passageSecret;
    public BoutonPassage boutonPassage;

    /**
     * les murs du labyrinthe
     */
    public boolean[][] murs;

    /**
     * retourne la case suivante selon une actions
     *
     * @param x      case depart
     * @param y      case depart
     * @param action action effectuee
     * @return case suivante
     */
    static int[] getSuivant(int x, int y, String action) {
        switch (action) {
            case HAUT:
                // on monte une ligne
                y--;
                break;
            case BAS:
                // on descend une ligne
                y++;
                break;
            case DROITE:
                // on augmente colonne
                x++;
                break;
            case GAUCHE:
                // on augmente colonne
                x--;
                break;
            default:
                throw new Error("action inconnue");
        }
        int[] res = {x, y};
        return res;
    }

    /**
     * charge le labyrinthe
     *
     * @param nom nom du fichier de labyrinthe
     * @return labyrinthe cree
     * @throws IOException probleme a la lecture / ouverture
     */
    public Labyrinthe(String nom) throws IOException {
        // ouvrir fichier
        FileReader fichier = new FileReader(nom);
        BufferedReader bfRead = new BufferedReader(fichier);

        int nbLignes, nbColonnes;
        // lecture nblignes
        nbLignes = Integer.parseInt(bfRead.readLine());
        // lecture nbcolonnes
        nbColonnes = Integer.parseInt(bfRead.readLine());

        // creation labyrinthe vide
        this.murs = new boolean[nbColonnes][nbLignes];
        this.pj = null;
        this.monstre = new ArrayList<Monstre>();
        this.passageSecret = null;
        this.boutonPassage = null;


        // lecture des cases
        String ligne = bfRead.readLine();

        // stocke les indices courants
        int numeroLigne = 0;

        Position pos_passage = null;
        Position pos_bouton = null;
        // parcours le fichier
        while (ligne != null) {

            // parcours de la ligne
            for (int colonne = 0; colonne < ligne.length(); colonne++) {
                char c = ligne.charAt(colonne);
                switch (c) {
                    case MUR:
                        this.murs[colonne][numeroLigne] = true;
                        break;
                    case VIDE:
                        this.murs[colonne][numeroLigne] = false;
                        break;
                    case PJ:
                        // pas de mur
                        this.murs[colonne][numeroLigne] = false;
                        // ajoute PJ
                        this.pj = new Perso(colonne, numeroLigne);
                        break;
                    case MONSTRE:
                        this.murs[colonne][numeroLigne] = false;
                        // On ajoute le monstre si il y en a un
                        this.monstre.add(new Monstre(colonne, numeroLigne));
                        break;
                    case PASSAGE:
                        this.murs[colonne][numeroLigne] = false;
                        pos_passage = new Position(colonne, numeroLigne);
                        break;
                    case BOUTON:
                        this.murs[colonne][numeroLigne] = false;
                        pos_bouton = new Position(colonne, numeroLigne);
                        break;
                    default:
                        throw new Error("caractere inconnu " + c);
                }
            }


            // lecture
            ligne = bfRead.readLine();
            numeroLigne++;
        }
        //si on a trouvé un passage secret dans le fichier texte
        if (pos_passage != null) {
            this.passageSecret = new PassageSecret(pos_passage);
            this.boutonPassage = new BoutonPassage(pos_bouton, passageSecret);
        }

        // ferme fichier
        bfRead.close();
    }


    /**
     * deplace le personnage en fonction de l'action.
     * gere la collision avec les murs
     *
     * @param action une des actions possibles
     */
    public void deplacerPerso(String action) {
        // case courante
        int[] courante = {this.pj.x, this.pj.y};

        // calcule case suivante
        int[] suivante = getSuivant(courante[0], courante[1], action);

        // si c'est pas un mur ou un monstre, on effectue le deplacement

        for (int i = 0; i < this.monstre.size(); i++) {

            if (this.deplacementPossible(suivante)) {
                // on met a jour personnage
                this.pj.x = suivante[0];
                this.pj.y = suivante[1];
            } else {
                break;
            }

        }

    }


    public boolean deplacementPossible(int[] suivant) {
        boolean valide = false;
        if (!this.murs[suivant[0]][suivant[1]]) {
            valide = true;

            if (this.passageSecret != null) {
                valide = this.passageSecret.etreOuvert();
            }

            if (this.monstre != null && valide) {
                //parcours tous les monstres
                for (int i = 0; i < this.monstre.size(); i++) {
                    //test si la place est libre
                    if (this.monstre.get(i).getX() != suivant[0] || this.monstre.get(i).getY() != suivant[1]) {
                        valide = true;
                    } else {
                        valide = false;
                        break;
                    }
                }
            }
        }
        return valide;
    }



    /**
     * jamais fini
     *
     * @return fin du jeu
     */
    public boolean etreFini() {
        return false;
    }

    // ##################################
    // GETTER
    // ##################################

    /**
     * return taille selon Y
     *
     * @return
     */
    public int getLengthY() {
        return murs[0].length;
    }

    /**
     * return taille selon X
     *
     * @return
     */
    public int getLength() {
        return murs.length;
    }

    /**
     * return mur en (i,j)
     *
     * @param x
     * @param y
     * @return
     */
    public boolean getMur(int x, int y) {
        // utilise le tableau de boolean
        return this.murs[x][y];
    }
}
